--- a/templates/microservices.html
+++ b/templates/microservices.html
@@ -75,7 +75,7 @@
     <div class="easel" x-init="calculateHeight($el, 10); fetchAll()">
         <table class="table is-striped is-fullwidth is-hoverable">
             <thead>
-                <th style="width: 5%;">M.ID</th>
+                <th style="width: 5%;">ID</th>
                 <th>Microservice</th>
                 <th>Location</th>
                 <th>Pass Key</th>
