--- a/templates/abase.axml
+++ b/templates/abase.axml
@@ -32,12 +32,12 @@
                 <p class="panel-tabs">
                     {% set icons = {
                         'microservices': 'hardware-chip',
-                        'events': 'bulb',
-                        'actions': 'flash-outline',
+                        'actions': 'bulb',
+                        'events': 'flash-outline',
                         'subscribers': 'ear',
                         'gists': 'megaphone'
                     } %}
-                    {% for target in ['microservices', 'events', 'actions', 'subscribers', 'gists'] %}
+                    {% for target in ['microservices', 'actions', 'events', 'subscribers', 'gists'] %}
                         <a href="/{{target}}" class="{{ 'is-active font-900' if req.url[1:] == target else '' }} is-flex align-items-center">
                             <span class="icon">
                                 <img src="/public/icons/{{ icons[target] }}.svg" class="svgi svgxs"></img>
