--- a/templates/events.html
+++ b/templates/events.html
@@ -10,16 +10,16 @@
 
     idSearch: '',
     eventSearch: '',
-    microserviceSearch: '',
-    schemataSearch: '',
+    deduperSearch: '',
+    payloadSearch: '',
     whenFilter: '',
 
     filterResults(){
         let base = `/v1/events?pagination=${100}&page=${page}`
         if(this.idSearch) base = `${base}&id=${this.idSearch}`
         if(this.eventSearch) base = `${base}&event=${this.eventSearch}`
-        if(this.microserviceSearch) base = `${base}&microservice=${this.microserviceSearch}`
-        if(this.schemataSearch) base = `${base}&schemata=${this.schemataSearch}`
+        if(this.deduperSearch) base = `${base}&deduper=${this.deduperSearch}`
+        if(this.payloadSearch) base = `${base}&payload=${this.payloadSearch}`
         if(this.whenFilter) base = `${base}&timeline=${this.whenFilter}`
         fetch(`${base}`)
         .then(response => response.json())
@@ -34,8 +34,8 @@
     clearFilter(){
         this.idSearch = '';
         this.eventSearch = '';
-        this.microserviceSearch = '';
-        this.schemataSearch = '';
+        this.deduperSearch = '';
+        this.payloadSearch = '';
         this.whenFilter = '';
         isFiltering = false;
         fetchAll();
@@ -44,7 +44,8 @@
     checkDirty(){
         if(this.idSearch !== '' ||
             this.eventSearch !== '' ||
-            this.microserviceSearch !== '' || this.schemataSearch !== '' || this.whenFilter !== ''
+            this.deduperSearch !== '' ||
+            this.payloadSearch !== '' || this.whenFilter !== ''
         ) {
             this.isFilterable = true;
             return true;
@@ -61,55 +62,131 @@
     <div><span class="font-800 pr-3">Filters:</span></div>
     <div class="pb-3" x-data="{{ commander() }}" x-effect="checkDirty">
         <span class="display-inline-block">
-            <input type="text" placeholder="event id" style="width: 5em" x-model="idSearch"/>
-            <input type="text" placeholder="event name..." style="width: 14em" x-model="eventSearch" />
-            <input type="text" placeholder="microservice..." style="width: 20em" x-model="microserviceSearch">
-            <input type="text" placeholder="search in json schema payload..." style="width: 25em" x-model="schemataSearch">
+            <input type="text" placeholder="a. id" style="width: 5em" x-model="idSearch" />
+            <input type="text" placeholder="search by event name..." style="width: 20em" x-model="eventSearch">
+            <input type="text" placeholder="filter by deduplication code" x-model="deduperSearch">
+            <input style="width: 25em" type="text" placeholder="search in event payload..." x-model="payloadSearch">
             <select x-model="whenFilter">
-                <template x-for="[val, txt] in Object.entries({day: 'Today', week: 'This Week', month: 'This Month'})" :key="val">
-                    <option :value="val" x-text="txt" :selected="val === whenFilter"></option>
+                <option>Select Day</option>
+                <template x-for="[val, txt] in Object.entries({today: 'Today', week: 'This Week', month: 'This Month'})" :key="val">
+                    <option :value="val" x-text="txt"></option>
                 </template>
             </select>
             <button @click="filterResults" :disabled="! isFilterable">
-                <img src="/public/icons/search.svg" class="svgxs" />
+                <ion-icon name="search" class="font-size-xs"></ion-icon>
                 search
             </button>
             <button disabled>&nbsp;</button>
             <button @click.self="clearFilter" :disabled="! isFiltering">
                 clear filter
-                <img src="/public/icons/leaf-outline.svg" class="svgxs" />
+                <ion-icon name="leaf-outline" class="font-size-xs"></ion-icon>
             </button>
         </span>
     </div>
+
     <div class="easel" x-init="calculateHeight($el, 10); fetchAll()">
         <table class="table is-striped is-fullwidth is-hoverable paginated">
             <thead>
-                <th style="width: 5%">EID</th>
-                <th style="width: 22%">Event</th>
-                <th style="width: 20%">Microservice</th>
-                <th>Schema</th>
-                <th>Timestamped</th>
+                <th style="width: 5%">Event</th>
+                <th style="width: 30%">Action</th>
+                <th style="width: 10%">Deduper</th>
+                <th>Payload</th>
+                <th style="width: 20%">Timestamped</th>
             </thead>
-            <tbody x-init="() => { calculateHeight($el, 100); }">
-                <template x-for="event in events">
+            <tbody x-init="() => { calculateHeight($el, 100); }" @refresher.window="refreshPage">
+                <template x-for="event in events" :key="event.event">
                     <tr>
-                        <td x-text="event.id" style="width: 5%"></td>
-                        <td x-text="event.event" style="width: 22%"></td>
-                        <td x-text="event.microservice" style="width: 20%"></td>
-                        <td x-text="JSON.stringify(event.schemata, undefined, 2).slice(0, 50) + '...'"></td>
-                        <td x-text="event.timestamped"></td>
+                        <td x-text="event.event" style="width: 5%"></td>
+                        <td x-text="event.action" style="width: 30%"></td>
+                        <td x-text="event.deduper" style="width: 10%"></td>
+                        <td x-text="truncate(JSON.stringify(event.payload, undefined, 2), 100)"></td>
+                        <td x-text="event.timestamped" style="width: 20%"></td>
                     </tr>
                 </template>
             </tbody>
-            <tfoot>
-                <th>ID</th>
-                <th>Event</th>
-                <th>Microservice</th>
-                <th>Schema</th>
-                <th>Timestamped</th>
+            <tfoot style="position: sticky; bottom: 0">
+                <tr>
+                    <th>Event</th>
+                    <th>Action</th>
+                    <th>Deduper</th>
+                    <th>Payload</th>
+                    <th>Timestamped</th>
+                </tr>
             </tfoot>
         </table>
+        {{ pagination() }}
     </div>
-    {{ pagination() }}
 </section>
+{% endblock %}
+
+{% block wizard %}
+<span x-data="{
+    actions: [],
+    action: '',
+    deduper: '',
+    payload: '',
+    fetchActions(){
+        fetch('/v1/actions', {
+            method: 'GET'
+        }).then(res => {
+            if(res.status !== 200) throw Error();
+            return res.json()
+        }).then(data => {
+            this.actions = data;
+        }).catch(err => {
+        })
+    },
+    resetForm(){
+        this.action = '';
+        this.deduper = '';
+        this.payload = '';
+    },
+    publishEvent() {
+        fetch('/v1/events', {
+            method: 'POST',
+            headers: {'Content-Type': 'application/json'},
+            body: JSON.stringify({
+                action: this.action,
+                deduper: this.deduper,
+                payload: this.payload
+            })
+        })
+        .then(response => {
+            if(response.status !== 201) throw Error(response.statusText)
+            return response.json()
+        }).then(data => {
+            ShowFeedback('info', 'Event published successfully')
+            this.resetForm();
+            $dispatch('refresher');
+            showModalContent = false;
+        }).catch(err => {
+            ShowFeedback('error', err.message)
+        })
+    }
+}">
+    <div class="modal-card-body p-5">
+        <div class="brick">
+            <label class="font-800 mr-2">Action: </label>
+            <div class="select">
+                <select x-model="action" id="" x-init="fetchActions">
+                    <option>Select An Action</option>
+                    <template x-for="dat in actions">
+                        <option :value="dat.action" x-text="`(${dat.id}): ${dat.action}`"></option>
+                    </template>
+                </select>
+            </div>
+        </div>
+        <div class="brick">
+            <label class="font-800 mr-2">Deduper (unique): </label>
+            <input type="text" class="w-30em" placeholder="Enter a unique deduplication key for event..." x-model="deduper">
+        </div>
+        <div class="brick">
+            <label class="font-800 mr-2">Payload (JSON): </label>
+            <textarea class="w-30em" rows="10" x-model="payload"></textarea>
+        </div>
+    </div>
+    <div class="modal-card-foot">
+        <button @click="publishEvent">publish event</button>
+    </div>
+</span>
 {% endblock %}
