--- a/amebo/templates/actions.html
+++ b/amebo/templates/actions.html
@@ -12,17 +12,15 @@
     isFilterable: false,
     oldPagination: pagination,
 
-    idSearch: '',
     actionSearch: '',
-    microserviceSearch: '',
+    producerSearch: '',
     schemataSearch: '',
     whenFilter: '',
 
     filterResults(){
         let base = `/v1/actions?pagination=${100}&page=${page}`
-        if(this.idSearch) base = `${base}&id=${this.idSearch}`
         if(this.actionSearch) base = `${base}&action=${this.actionSearch}`
-        if(this.microserviceSearch) base = `${base}&microservice=${this.microserviceSearch}`
+        if(this.producerSearch) base = `${base}&producer=${this.producerSearch}`
         if(this.schemataSearch) base = `${base}&schemata=${this.schemataSearch}`
         if(this.whenFilter) base = `${base}&timeline=${this.whenFilter}`
         fetch(`${base}`)
@@ -36,9 +34,8 @@
     },
 
     clearFilter(){
-        this.idSearch = '';
         this.actionSearch = '';
-        this.microserviceSearch = '';
+        this.producerSearch = '';
         this.schemataSearch = '';
         this.whenFilter = '';
         isFiltering = false;
@@ -46,9 +43,8 @@
     },
 
     checkDirty(){
-        if(this.idSearch !== '' ||
-            this.actionSearch !== '' ||
-            this.microserviceSearch !== '' || this.schemataSearch !== '' || this.whenFilter !== ''
+        if(this.actionSearch !== '' ||
+            this.producerSearch !== '' || this.schemataSearch !== '' || this.whenFilter !== ''
         ) {
             this.isFilterable = true;
             return true;
@@ -73,8 +69,8 @@
                     <div x-text="previewing.action"></div>
                 </div>
                 <div class="display-flex space-between display-field py-1">
-                    <span class="label">Microservice</span>
-                    <div x-text="previewing.microservice"></div>
+                    <span class="label">Producer</span>
+                    <div x-text="previewing.producer"></div>
                 </div>
                 <div class="display-flex space-between display-field py-1">
                     <span class="label">Created At</span>
@@ -105,9 +101,8 @@
             <div class="px-3"><span class="font-800">Filters:</span></div>
             <div class="px-3 pb-2" x-data="{{ commander() }}" x-effect="checkDirty">
                 <span class="display-inline-block">
-                    <input type="text" placeholder="action id" style="width: 5em" x-model="idSearch"/>
                     <input type="text" placeholder="action name..." style="width: 14em" x-model="actionSearch" />
-                    <input type="text" placeholder="microservice..." style="width: 20em" x-model="microserviceSearch">
+                    <input type="text" placeholder="producer..." style="width: 20em" x-model="producerSearch">
                     <input type="text" placeholder="search in json schema payload..." style="width: 25em" x-model="schemataSearch">
                     <select x-model="whenFilter">
                         <template x-for="[val, txt] in Object.entries({day: 'Today', week: 'This Week', month: 'This Month'})" :key="val">
@@ -128,27 +123,24 @@
             <div class="easel" x-init="fetchAll">
                 <table class="table is-striped is-fullwidth is-hoverable paginated">
                     <thead>
-                        <th style="width: 5%">ID</th>
                         <th style="width: 22%">Action</th>
-                        <th style="width: 20%">Microservice</th>
+                        <th style="width: 20%">Producer</th>
                         <th>Schema</th>
                         <th>Timestamped</th>
                     </thead>
                     <tbody @refresher.window="refreshPage"  x-init="calculateHeight($el, 110);">
                         <template x-for="action in actions">
                             <tr class="cursor-pointer" @click="previewing = action">
-                                <td x-text="action.id" style="width: 5%"></td>
                                 <td x-text="action.action" style="width: 22%"></td>
-                                <td x-text="action.microservice" style="width: 20%"></td>
+                                <td x-text="action.producer" style="width: 20%"></td>
                                 <td x-text="`${JSON.stringify(action.schemata, undefined, 2).length} characters`"></td>
                                 <td x-text="action.timestamped"></td>
                             </tr>
                         </template>
                     </tbody>
                     <tfoot>
-                        <th>ID</th>
                         <th>Action</th>
-                        <th>Microservice</th>
+                        <th>Producer</th>
                         <th>Schema</th>
                         <th>Timestamped</th>
                     </tfoot>
@@ -164,30 +156,33 @@
 {% block wizard %}
 <span x-data="{
     ide: null,
-    microservices: [],
-    microservice: '',
+    producers: [],
+    producer: '',
     schema: '',
     action: '',
-    fetchMicroservices(){
-        fetch('/v1/microservices', {
+    passphrase: '',
+    fetchProducers(){
+        fetch('/v1/producers', {
             method: 'GET'
         }).then(res => {
             if(res.status !== 200) throw Error();
             return res.json()
         }).then(data => {
-            this.microservices = data;
+            this.producers = data;
         }).catch(err => {
         })
     },
     resetForm(){
-        this.microservice = '';
+        this.producer = '';
+        this.passphrase = '';
         this.action = '';
         this.schema = '';
     },
     saveAction(){
         superpost('/v1/actions').send({
-            microservice: this.microservice,
+            producer: this.producer,
             schemata: this.ide.getValue(),
+            passphrase: this.passphrase,
             action: this.action
         }).then(res => {
             ShowFeedback('info', 'Action created')
@@ -205,14 +200,25 @@
             <input type="text" class="w-30em input" placeholder="Enter a name for your action..." x-model="action">
         </div>
         <div class="brick vertical-aligns-middle">
-            <label class="font-800 mr-2">Microservice: </label>
+            <label class="font-800 mr-2">Producer: </label>
             <div class="select">
-                <select x-model="microservice" id="" x-init="fetchMicroservices">
-                    <option>Select A Microservice</option>
-                    <template x-for="microservice in microservices">
-                        <option :value="microservice.id" x-text="`(${microservice.id}): ${microservice.microservice}`"></option>
+                <select x-model="producer" x-init="fetchProducers">
+                    <option>Select A Producer</option>
+                    <template x-for="producer in producers">
+                        <option :value="producer.name" x-text="producer.name"></option>
                     </template>
                 </select>
+            </div>
+        </div>
+        <div class="brick vertical-aligns-middle">
+            <label class="font-800 mr-2">Passphrase: </label>
+            <div class="control display-inline-block has-icons-right" x-data="{
+                visible: false
+            }">
+                <input :type="visible ? 'text' : 'password'" class="w-30em input" placeholder="Enter passphrase for producer..." x-model="passphrase">
+                <span class="icon is-right" @click="visible = !visible">
+                    <img :src="`/public/icons/${visible ? 'eye' : 'neye'}.svg`" class="pointer-events-all"></img>
+                </span>
             </div>
         </div>
         <div class="brick">
