--- a/amebo/templates/gists.html
+++ b/amebo/templates/gists.html
@@ -65,14 +65,14 @@
     <div><span class="font-800 pr-3">Filters:</span></div>
     <div class="pb-3" x-data="{{ commander() }}" x-effect="checkDirty">
         <span class="display-inline-block">
-            <input type="text" placeholder="origin microservice..." style="width: 14em" x-model="originSearch">
+            <input type="text" placeholder="origin producer..." style="width: 14em" x-model="originSearch">
             <select x-model="completedFilter">
                 <option>Is Completed?</option>
                 <template x-for="val in ['True', 'False']" :key="val">
                     <option :value="val.toLowerCase()" x-text="val" :selected="val === completedFilter"></option>
                 </template>
             </select>
-            <input type="text" placeholder="destination microservice..." style="width: 20em" x-model="destinationSearch">
+            <input type="text" placeholder="destination producer..." style="width: 20em" x-model="destinationSearch">
             <input type="text" placeholder="gist id..." style="width: 6em" x-model="gistSearch">
             <input type="text" placeholder="event name..." style="width: 15em" x-model="eventSearch">
             <select x-model="whenFilter">
