--- a/amebo/templates/abase.axml
+++ b/amebo/templates/abase.axml
@@ -40,7 +40,7 @@
                         'subscriptions': 'ear',
                         'gists': 'megaphone'
                     } %}
-                    {% for target in ['producers', 'actions', 'events', 'subscribers', 'gists'] %}
+                    {% for target in ['applications', 'actions', 'events', 'subscriptions', 'gists'] %}
                         <a href="/p/{{target}}" class="{{ 'is-active font-900' if req.url[3:] == target else '' }} is-flex align-items-center">
                             <span class="icon">
                                 <img src="/public/icons/{{ icons[target] }}.svg" class="svgi svgxs"></img>
