--- a/amebo/templates/actions.html
+++ b/amebo/templates/actions.html
@@ -124,7 +124,7 @@
                 <table class="table is-striped is-fullwidth is-hoverable paginated">
                     <thead>
                         <th style="width: 22%">Action</th>
-                        <th style="width: 20%">Producer</th>
+                        <th style="width: 20%">Application</th>
                         <th>Schema</th>
                         <th>Timestamped</th>
                     </thead>
@@ -140,7 +140,7 @@
                     </tbody>
                     <tfoot>
                         <th>Action</th>
-                        <th>Producer</th>
+                        <th>Application</th>
                         <th>Schema</th>
                         <th>Timestamped</th>
                     </tfoot>
@@ -161,7 +161,7 @@
     schema: '',
     action: '',
     passphrase: '',
-    fetchProducers(){
+    fetchApplications(){
         fetch('/v1/applications', {
             method: 'GET'
         }).then(res => {
@@ -200,12 +200,12 @@
             <input type="text" class="w-30em input" placeholder="Enter a name for your action..." x-model="action">
         </div>
         <div class="brick vertical-aligns-middle">
-            <label class="font-800 mr-2">Producer: </label>
+            <label class="font-800 mr-2">Application: </label>
             <div class="select">
-                <select x-model="application" x-init="fetchProducers">
-                    <option>Select A Producer</option>
+                <select x-model="application" x-init="fetchApplications">
+                    <option>Select an Application</option>
                     <template x-for="application in applications">
-                        <option :value="application.name" x-text="application.name"></option>
+                        <option :value="application.application" x-text="application.application"></option>
                     </template>
                 </select>
             </div>
@@ -215,7 +215,7 @@
             <div class="control display-inline-block has-icons-right" x-data="{
                 visible: false
             }">
-                <input :type="visible ? 'text' : 'password'" class="w-30em input" placeholder="Enter passphrase for producer..." x-model="passphrase">
+                <input :type="visible ? 'text' : 'password'" class="w-30em input" placeholder="Enter passphrase for application..." x-model="passphrase">
                 <span class="icon is-right" @click="visible = !visible">
                     <img :src="`/public/icons/${visible ? 'eye' : 'neye'}.svg`" class="pointer-events-all"></img>
                 </span>
