--- a/amebo/templates/applications.html
+++ b/amebo/templates/applications.html
@@ -79,7 +79,7 @@
     <div class="easel" x-init="calculateHeight($el, 10)">
         <table class="table is-striped is-fullwidth is-hoverable">
             <thead>
-                <th>Producer</th>
+                <th>Name</th>
                 <th>Location</th>
                 <th>Pass phrase</th>
                 <th>Timestamped</th>
@@ -87,7 +87,7 @@
             <tbody @refresher.window="refreshPage" x-init="() => { calculateHeight($el, 100); }">
                 <template x-for="application in applications">
                     <tr>
-                        <td x-text="application.name"></td>
+                        <td x-text="application.application"></td>
                         <td x-text="application.location"></td>
                         <td x-text="application.passphrase"></td>
                         <td x-text="application.timestamped"></td>
@@ -95,7 +95,7 @@
                 </template>
             </tbody>
             <tfoot style="position: sticky; bottom: 0">
-                <th>Producer</th>
+                <th>Name</th>
                 <th>Location</th>
                 <th>Pass phrase</th>
                 <th>Timestamped</th>
@@ -109,7 +109,7 @@
 
 {% block wizard %}
 <span x-data="{
-    name: '',
+    application: '',
     address: '',
     passphrase: '',
     resetForm(){
@@ -117,13 +117,13 @@
         this.passphrase = '';
         this.address = '';
     },
-    saveProducer(){
+    saveApplication(){
         superpost('/v1/applications').send({
-            name: this.name,
+            application: this.application,
             address: this.address,
             passphrase: this.passphrase
         }).then(res => {
-            supertoast('info', 'Producer created');
+            supertoast('info', 'Application created');
             this.resetForm();
             $dispatch('refresher');
             showModalContent = false;
@@ -135,7 +135,7 @@
     <div class="modal-card-body p-5">
         <div class="brick">
             <label class="font-800 mr-2">Name: </label>
-            <input type="text" class="w-30em input" placeholder="Enter a name for your application..." x-model="name">
+            <input type="text" class="w-30em input" placeholder="Enter a name for your application..." x-model="application">
         </div>
         <div class="brick">
             <label class="font-800 mr-2">Address: </label>
@@ -147,7 +147,7 @@
         </div>
     </div>
     <div class="modal-card-foot">
-        <button class="button primary" @click="saveProducer">save application</button>
+        <button class="button primary" @click="saveApplication">save application</button>
     </div>
 </span>
 {% endblock %}
